--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.0.0",
     "follow-redirects": "^1.15.3",
     "formik": "^2.4.5",
+    "i18n-iso-countries": "^7.14.0",
     "isomorphic-dompurify": "^2.4.0",
     "next": "13.5.4",
     "next-intl": "^2.20.2",
