--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "swiper": "^11.0.3",
     "tailwind-merge": "^2.2.2",
     "twilio": "^4.19.3",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
